src/test/deca/context/invalid/declMethod-invalidStringReturnType.context
declMethod-invalidStringReturnType.deca:2: